[gd_scene load_steps=13 format=1]

[ext_resource path="res://World/Core.gd" type="Script" id=1]
[ext_resource path="res://lane_bg.png" type="Texture" id=2]
[ext_resource path="res://lane_fg.png" type="Texture" id=3]
[ext_resource path="res://Town/town_marker_0.png" type="Texture" id=4]
[ext_resource path="res://Town/TownButton.gd" type="Script" id=5]
[ext_resource path="res://resources/metalworks.png" type="Texture" id=6]
[ext_resource path="res://fonts/DWARVESC.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://fonts/Timeless-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Town/ResourceRef.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]

resource/name = "run"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:uv")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2Array( 0, 0, 16, 0, 16, 128, 0, 128 ), Vector2Array( 0, -64, 16, -64, 16, 64, 0, 64 ), Vector2Array( 0, -128, 16, -128, 16, 0, 0, 0 ) ] }

[sub_resource type="DynamicFont" id=2]

font/size = 42
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]

font/size = 30
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 8 )

[node name="TownCore" type="Position2D"]

visibility/behind_parent = true
transform/pos = Vector2( 90, 70 )
script/script = ExtResource( 1 )
name = "RAND"
team_color = Color( 0.501961, 0.501961, 0.501961, 1 )
level = 0
produces = "METALWORKS"

[node name="TradeLane" type="Sprite" parent="."]

editor/display_folded = true
visibility/opacity = 0.5
visibility/blend_mode = 1
transform/scale = Vector2( 0.5, 0.01 )
z/z = -1
z/relative = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( -8, 0 )

[node name="Arrow" type="Polygon2D" parent="TradeLane"]

visibility/blend_mode = 1
polygon = Vector2Array( -8, 0, 8, 0, 8, 128, -8, 128 )
uv = Vector2Array( 0, 0, 16, 0, 16, 128, 0, 128 )
color = Color( 0.300615, 0.886719, 0.266708, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 3 )
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Animator" type="AnimationPlayer" parent="TradeLane"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/run = SubResource( 1 )
playback/active = true
playback/speed = 0.5
blend_times = [  ]
autoplay = "run"

[node name="Button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -32.0
margin/top = -32.0
margin/right = 32.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
script/script = ExtResource( 5 )

[node name="Product" type="Sprite" parent="."]

texture = ExtResource( 6 )

[node name="Name" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -111.0
margin/top = -61.0
margin/right = 111.0
margin/bottom = -18.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.132813, 0.010376, 0.010376, 1 )
custom_constants/shadow_as_outline = 1
text = "RAND"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Level" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = -26.0
margin/right = 47.0
margin/bottom = 5.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.00784314, 0.00784314, 1 )
custom_constants/shadow_as_outline = 2
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ResourceRef" type="Node" parent="."]

script/script = ExtResource( 9 )

[node name="PopulationTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="timeout" from="PopulationTimer" to="." method="_on_PopulationTimer_timeout"]


